<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit">Submit</string>
	<string-array name="city_array">
        <item>Atlanta Hawks</item>
        <item>Boston Celtics</item>
        <item>Brooklyn Nets</item>
        <item>Charlotte Bobcats</item>
        <item>Chicago Bulls</item>
        <item>Cleveland Cavaliers</item>
        <item>Dallas Mavericks</item>
        <item>Houston Rockets</item>
        <item>Indiana Pacers</item>
        <item>Los Angeles Clippers</item>
        <item>Los Angeles Lakers</item>
        <item>Memphis Grizzlies</item>
        <item>Milwaukee Bucks</item>
        <item>Minnesota Timberwolves</item>
        <item>New Orleans Pelicans</item>
        <item>New York Knicks</item>
        <item>Oklahoma City Thinder</item>
        <item>Orlando Magic</item>
        <item>Philadelphia 76ers</item>
        <item>Phoenix Suns</item>
        <item>Portland Trail Blazers</item>
        <item>Sacramento Kings</item>
        <item>San Antonio Spurs</item>
        <item>Toronto Raptors</item>
        <item>Utah Jazz</item>
        <item>Washington Wizards</item>
    </string-array>
	<string name="basketball_logo">basketball</string>
	<string name="webview"/>
	<string name="nbaBtn">More NBA Info</string>
	<string name="helpTxt">Select a team from the list below.</string>
	<string name="moreTxt">For more information click the button below.</string>
</resources>
